--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+# User Defined
+# model dir
+model/mlruns
+model/main-deployment.yaml
+model/mlflow.db
