--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,10 @@ dmypy.json
 
 
 # User Defined
+.vscode
 # model dir
 model/mlruns
 model/main-deployment.yaml
 model/mlflow.db
+
+model/sandbox.ipynb
