--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,13 @@
 [tool.pylint.messages_control]
-
 disable = [
   "missing-function-docstring",
   "missing-class-docstring",
   "missing-final-newline",
   "missing-final-newline",
   "missing-module-docstring"
-
 ]
+
+[tool.black]
+line-length = 200
+target-version = ['py39']
+skip-string-normalization = true
