--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,7 @@ disable = [
 line-length = 200
 target-version = ['py39']
 skip-string-normalization = true
+
+[tool.isort]
+multi_line_output = 3
+length_sort = true
